--- a/video/ffmpeg-svn/BUILD
+++ b/video/ffmpeg-svn/BUILD
@@ -1,9 +1,9 @@
 CFLAGS="${CFLAGS/-funroll-loops/} -O3"
 disable_pic  &&
 
-if [ $FFAMR != none ];then
-  OPTS="--enable-lib$FFAMR $FFMPEG_SWSCALE $OPTS"
-fi  &&
+#if [ $FFAMR != none ];then
+#  OPTS="--enable-lib$FFAMR $FFMPEG_SWSCALE $OPTS"
+#fi  &&
 
 ./configure  --prefix=${INSTALL_ROOT}/usr            \
              --mandir=${INSTALL_ROOT}/usr/share/man  \
