--- a/kernels/iwlwifi/BUILD
+++ b/kernels/iwlwifi/BUILD
@@ -1,1 +1,3 @@
-make KVER=$(get_kernel_version)
+make_single  &&
+make KVER=$(get_kernel_version) || make KVER=$(get_kernel_version)  &&
+make_normal
