--- a/windowmanagers/xfce/BUILD
+++ b/windowmanagers/xfce/BUILD
@@ -1,3 +1,3 @@
-export CPPFLAGS="-I/usr/include/freetype2"                           &&
-OPTS="--with-data-dir=${INSTALL_ROOT}/usr/share --enable-xft $OPTS"  &&
+export CPPFLAGS="-I/usr/include/freetype2"               &&
+OPTS="--with-data-dir=${INSTALL_ROOT}/usr/share  $OPTS"  &&
 default_build
