xorg-xserver/xorg-server: hack in FINAL to break lefs off some other spells to get the ordering proper and various other bugfixes that hopefully solve most bugs...

--- a/xorg-xserver/xorg-server/BUILD
+++ b/xorg-xserver/xorg-server/BUILD
@@ -13,7 +13,9 @@ CFLAGS="${CFLAGS/-O3/-O0}"
 CXXFLAGS="${CXXFLAGS/-O3/-O0}"
 fi                                                            &&
 OPTS="${XORG_SERVER_OPTS}                                     \
-      --with-mesa-source=${BUILD_DIRECTORY}/Mesa-${VERSION2}  \
+      --with-mesa-source=${SOURCE_DIRECTORY}/Mesa-${VERSION2} \
+      --with-xkb-output=$TRACK_ROOT/var/lib/xkb               \
+      --with-dri-driver-path=$TRACK_ROOT/usr/lib/modules/dri  \
       --disable-xprint                                        \
       --disable-dmx                                           \
       ${OPTS}"                                                &&
