--- a/kernels/xen-hypervisor/BUILD
+++ b/kernels/xen-hypervisor/BUILD
@@ -2,7 +2,7 @@ unset LDFLAGS
 unset CFLAGS
 if [[ "$XEN_TARGET_X86_PAE" == "y" ]]
 then
-  make XEN_TARGET_X86_PAE=y -C xen
+  make XEN_TARGET_X86_PAE=y xen
 else
-  make -C xen
+  make xen
 fi
