--- a/smgl/initng/BUILD
+++ b/smgl/initng/BUILD
@@ -1,8 +1,3 @@
 CFLAGS="${CFLAGS/-Os/-O2}" &&
 cd ${SOURCE_DIRECTORY}     &&
-mkdir build                &&
-cd build                   &&
-cmake ..                   &&
-make_single                &&
-make                       &&
-make_normal
+cmake_build
