yafray: fixed to be useable with blender

--- a/graphics/yafray/BUILD
+++ b/graphics/yafray/BUILD
@@ -1,4 +1,9 @@
+for i in SConstruct linux-settings.py; do
+  sedit "s:/usr/local:/usr:" $i
+done &&
+
 #prevent .sconsign files from being created everywhere.
 sedit "/SConscript/a\
 SConsignFile()" SConstruct &&
+
 scons
