ferm: fix a typo ;p

--- a/net/ferm/init.d/ferm.conf
+++ b/net/ferm/init.d/ferm.conf
@@ -1,6 +1,6 @@
 # Ferm example script
 #
-# for more info how to confgure it -- read ferm(1) and import-ferm(1)
+# for more info how to configure it -- read ferm(1) and import-ferm(1)
 #
 
 table filter {
