--- a/audio-players/mpg123/BUILD
+++ b/audio-players/mpg123/BUILD
@@ -1,2 +1,5 @@
-OPTS="--with-audio=$MPG123_AUDIO $OPTS $MPG123_OPTS --with-seektable=$MPG123_SEEKTABLE" &&
+if [[  "$MPG123_AUDIO" != auto ]]; then
+	OPTS="$OPTS --with-audio=$MPG123_AUDIO"
+fi &&
+OPTS="$OPTS $MPG123_OPTS --with-seektable=$MPG123_SEEKTABLE" &&
 default_build
