--- a/gnome2-libs/librsvg2/BUILD
+++ b/gnome2-libs/librsvg2/BUILD
@@ -10,9 +10,9 @@ if test "$(get_spell_provider $SPELL GECKO)" = firefox; then
   sedit  's:mozilla/plugins:firefox/plugins:'  moz-plugin/Makefile.in  &&
   # note: needs to be exported or configure won't see it
   export MOZILLA_CONFIG=firefox-config
-elif test "$(get_spell_provider $SPELL GECKO)" = iceweasel; then
-  sedit  's:mozilla/plugins:iceweasel/plugins:'  moz-plugin/Makefile.in  &&
-  export MOZILLA_CONFIG=iceweasel-config
+elif test "$(get_spell_provider $SPELL GECKO)" = icecat; then
+  sedit  's:mozilla/plugins:icecat/plugins:'  moz-plugin/Makefile.in  &&
+  export MOZILLA_CONFIG=icecat-config
 elif test "$(get_spell_provider $SPELL GECKO)" = seamonkey; then
   sedit  's:mozilla/plugins:seamonkey/plugins:'  moz-plugin/Makefile.in  &&
   export MOZILLA_CONFIG=seamonkey-config
