virtualbox: pulseaudio is now an optional dependency, removed Xcursor.patch as it's no longer needed

--- a/utils/virtualbox/BUILD
+++ b/utils/virtualbox/BUILD
@@ -1,11 +1,3 @@
-./configure      &&
-
-# patch to make this spell compiling with libxcursor from xorg-modular
-# this patch must be applied after configure is run
-if  check_if_xorg_modular_libs ;  then
-    cd $SOURCE_DIRECTORY  && 
-    patch -p0 < $SCRIPT_DIRECTORY/Xcursor.patch 
-fi  && 
-
+./configure $OPTS  &&
 source ./env.sh  &&
 kmk all
