sane-backends: /usr/doc => /usr/share/doc

--- a/graphics-libs/sane-backends/BUILD
+++ b/graphics-libs/sane-backends/BUILD
@@ -21,4 +21,7 @@ if [[ $SANE_LOCAL == none ]];then
 else
 export BACKENDS=$SANE_LOCAL
 fi &&
+
+OPTS="$OPTS --with-docdir=$INSTALL_ROOT/usr/share/doc/sane-backends" &&
+
 default_build
