openal: release version fails with multiple make jobs

--- a/audio-libs/openal/BUILD
+++ b/audio-libs/openal/BUILD
@@ -2,5 +2,7 @@ if [[ $OPENAL_VERSION == snapshot ]]; then
   cd linux
 elif [[ $OPENAL_VERSION == scm ]]; then
   cd OpenAL-Sample
+else
+  make_single
 fi  &&
 default_build
