python: saving the root

--- a/devel/python/BUILD
+++ b/devel/python/BUILD
@@ -4,9 +4,10 @@ export OPTS="$OPTS --enable-shared --enable-unicode"
 # The following file from kdebindings has a syntax error that
 # makes Python compilation fail
 local PYTHON_VERSION=`echo $VERSION|cut -d. -f1,2`
-if [[ -f /usr/lib/python${PYTHON_VERSION}/pydcop.py ]]; then
+if [[ -f $INSTALL_ROOT/usr/lib/python${PYTHON_VERSION}/pydcop.py ]]; then
   mkdir $SOURCE_DIRECTORY/spell-tmp &&
-  mv /usr/lib/python${PYTHON_VERSION}/pydcop.py $SOURCE_DIRECTORY/spell-tmp
+  mv $INSTALL_ROOT/usr/lib/python${PYTHON_VERSION}/pydcop.py \
+    $SOURCE_DIRECTORY/spell-tmp
 fi &&
 
 default_build
