--- a/perl-cpan/perl-libnet/BUILD
+++ b/perl-cpan/perl-libnet/BUILD
@@ -1,5 +1,5 @@
-if [[ $NEW_CUSTOM = n ]]; then
-   perl Configure -d
+if [[ $NEW_CUSTOM == n ]]; then
+  perl Configure -d
 fi &&
 
 default_build_perl
