pgsql_perl5: BUILD cleaned up

--- a/perl-cpan/pgsql_perl5/BUILD
+++ b/perl-cpan/pgsql_perl5/BUILD
@@ -1,4 +1,2 @@
-export POSTGRES_INCLUDE=${INSTALL_ROOT}/usr/include &&
-export POSTGRES_LIB=${INSTALL_ROOT}/usr/lib &&
-
-default_build_perl
+POSTGRES_INCLUDE=$INSTALL_ROOT/usr/include &&
+POSTGRES_LIB=$INSTALL_ROOT/usr/lib | default_build_perl
