pgsql_perl5: stupid typo

--- a/perl-cpan/pgsql_perl5/BUILD
+++ b/perl-cpan/pgsql_perl5/BUILD
@@ -1,2 +1,2 @@
 POSTGRES_INCLUDE=$INSTALL_ROOT/usr/include &&
-POSTGRES_LIB=$INSTALL_ROOT/usr/lib | default_build_perl
+POSTGRES_LIB=$INSTALL_ROOT/usr/lib && default_build_perl
