lua4: cleaned up

--- a/devel/lua4/BUILD
+++ b/devel/lua4/BUILD
@@ -1,4 +1,4 @@
-  sedit  's/^so:/& all/'  Makefile  &&
+sedit "s/^so:/& all/" Makefile &&
 
-  make  MYCFLAGS="$CFLAGS"  MYLDFLAGS="$LDFLAGS -Wl,-E"  \
-        LOADLIB="-DUSE_DLOPEN=1"  DLLIB="-ldl"  all  so 
+make MYCFLAGS="$CFLAGS" MYLDFLAGS="$LDFLAGS -Wl,-E" \
+  LOADLIB="-DUSE_DLOPEN=1" DLLIB="-ldl" all so
