--- a/ruby-raa/ruby-gnomeprintui/BUILD
+++ b/ruby-raa/ruby-gnomeprintui/BUILD
@@ -1,5 +1,4 @@
 cd   gnomeprint       &&
 ruby extconf.rb       &&
 cd   ../gnomeprintui  &&
-ruby extconf.rb       &&
-make             
+default_build
