--- a/python-pypi/gaphor/BUILD
+++ b/python-pypi/gaphor/BUILD
@@ -2,6 +2,6 @@
 rm -rf data/plugins/pynsource/pynsource-1.4a &&
 
 # also should have been fixed in next version
-patch -p0 < $SCRIPT_DIRECTORY/msgfmt.patch  &&
+patch -p0 < $SCRIPT_DIRECTORY/msgfmt.patch &&
 
-python setup.py build
+default_build
