--- a/python-pypi/python-ldap/BUILD
+++ b/python-pypi/python-ldap/BUILD
@@ -1,4 +1,6 @@
-  sedit 's|^\(library_dirs[[:space:]]*=\).*$|\1 /usr/lib     /usr/lib/sasl2|'    setup.cfg &&
-  sedit 's|^\(include_dirs[[:space:]]*=\).*$|\1 /usr/include /usr/include/sasl|' setup.cfg &&
+sed -i "s|^\(library_dirs[[:space:]]*=\).*$|\1 /usr/lib     /usr/lib/sasl2|" \
+  setup.cfg &&
+sed -i "s|^\(include_dirs[[:space:]]*=\).*$|\1 /usr/include /usr/include/sasl|" \
+  setup.cfg &&
 
-  python  setup.py  build
+default_build
