mpg123: version 1.1.0 and finally a more complete spell, supporting multiple output modules.

--- a/audio-players/mpg123/BUILD
+++ b/audio-players/mpg123/BUILD
@@ -1,5 +1,8 @@
-if [[  "$MPG123_AUDIO" != auto ]]; then
-	OPTS="$OPTS --with-audio=$MPG123_AUDIO"
+if [[ "$MPG123_WITH_AUDIO" != "" ]]; then
+	OPTS="--with-audio=$MPG123_WITH_AUDIO $OPTS"
 fi &&
-OPTS="$OPTS $MPG123_OPTS --with-seektable=$MPG123_SEEKTABLE" &&
+if [[ "$MPG123_SEEKTABLE" != "" ]]; then
+  OPTS="--with-seektable=$MPG123_SEEKTABLE $OPTS" 
+fi &&
+OPTS="$MPG123_MODULES $OPTS"
 default_build
