audio-libs/openal: added option to disable OSS support, changed a deprecated configure option to the new one

--- a/audio-libs/openal/BUILD
+++ b/audio-libs/openal/BUILD
@@ -1,3 +1,8 @@
+if [[ $OPENAL_OSS == n ]]; then
+    OPTS="$OPTS --disable-linux"
+else
+    OPTS="$OPTS --enable-linux"
+fi &&
 if [[ $OPENAL_VERSION == snapshot ]]; then
   cd linux
 elif [[ $OPENAL_VERSION == scm ]]; then
