--- a/disk/e2fsprogs/BUILD
+++ b/disk/e2fsprogs/BUILD
@@ -1,4 +1,4 @@
-  [[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=${HOST}"
+[[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=$HOST"
 
 ./configure  --host=${BUILD}                           \
              --prefix=${TRACK_ROOT}/usr              \
