--- a/utils/nut/BUILD
+++ b/utils/nut/BUILD
@@ -1,3 +1,3 @@
 create_account ups &&
-OPTS="--with-user=ups --with-group=nobody $OPTS" &&
+OPTS="--with-user=ups --with-group=ups $OPTS" &&
 default_build
