last.fm: 1.4.2.58240 #14282 modified patch from Jose Iria

--- a/audio-players/last.fm/BUILD
+++ b/audio-players/last.fm/BUILD
@@ -1,4 +1,5 @@
 local PATH="/usr/bin/qt4:$PATH" &&
 make_single &&
+sedit "s/-ffast-math//" src/output/portAudio/Makefile &&
 default_build &&
 make_normal
