mono: x86_64 fails using --with-tls__thread

--- a/devel/mono/BUILD
+++ b/devel/mono/BUILD
@@ -1,9 +1,8 @@
 if [ "${HOST%%-*}" == x86_64 ]; then
-  CFLAGS="${CFLAGS//-[fD]PIC/}"  &&
-  OPTS="--with-tls=__thread $OPTS --build=${BUILD}"
-else
-  OPTS="--with-tls=pthread $OPTS --build=${BUILD}"
-fi &&
+  CFLAGS="${CFLAGS//-[fD]PIC/}"
+fi  &&
+
+OPTS="--with-tls=pthread $OPTS --build=${BUILD}"
 
 [[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=${HOST}"
 
