last.fm: make it cast by patching

--- a/audio-players/last.fm/BUILD
+++ b/audio-players/last.fm/BUILD
@@ -1,5 +1,5 @@
 local PATH="/usr/bin/qt4:$PATH" &&
 make_single &&
-sedit "s/-ffast-math//" src/output/portAudio/Makefile &&
+CXXFLAGS="${CXXFLAGS//-ffast-math/}" &&
 default_build &&
 make_normal
