--- a/printer/ghostscript/BUILD
+++ b/printer/ghostscript/BUILD
@@ -2,11 +2,8 @@
 OPTS="--with-drivers=`echo ${GS_PRINTERS} |sed "s/^ *//;s/ /,/g"`,FILES \
       --enable-dynamic ${GS_OMNI} ${OPTS}"  &&
 
-#make_single    &&
-#default_build  &&
-#make_normal
 default_build &&
 
-if  [[ "$GS_LIBGS" == y  ]];  then
-  make  so
+if [[ $GS_LIBGS == y ]]; then
+  make so
 fi
