--- a/graphics/wings3d/BUILD
+++ b/graphics/wings3d/BUILD
@@ -1,4 +1,4 @@
-local WINGS3D_PATH               &&
+local WINGS3D_PATH
 
 if spell_ok xorg-server; then
    sedit 's:GL_LIBS = -lGLU -lGL:GL_LIBS = -L/usr/lib -lGLU -lGL:' plugins_src/accel/Makefile
@@ -6,7 +6,7 @@ else
    sedit 's:GL_LIBS = -lGLU -lGL:GL_LIBS = -L/usr/X11R6/lib -lGLU -lGL:' plugins_src/accel/Makefile
 fi  &&
 
-export ESDL_PATH=/usr/lib/esdl   &&
-WINGS3D_PATH=/usr/lib/wings      &&
+persistent_add ESDL_PATH=/usr/lib/esdl
+WINGS3D_PATH=/usr/lib/wings
 make_single                      &&
 make
