--- a/graphics/djview4/BUILD
+++ b/graphics/djview4/BUILD
@@ -1,4 +1,3 @@
-export QTDIR="" &&
-export PATH=${INSTALL_ROOT}/usr/bin/qt4:$PATH  &&
+persistent_add QTDIR="" &&
+persistent_add PATH=${INSTALL_ROOT}/usr/bin/qt4:$PATH  &&
 default_build
-
