--- a/printer/ghostscript/BUILD
+++ b/printer/ghostscript/BUILD
@@ -2,8 +2,10 @@
 OPTS="--with-drivers=`echo ${GS_PRINTERS} |sed "s/^ *//;s/ /,/g"`,FILES \
       --enable-dynamic ${GS_OMNI} ${OPTS}"  &&
 
+make_single   &&
 default_build &&
 
 if [[ $GS_LIBGS == y ]]; then
   make so
-fi
+fi            &&
+make_normal
