--- a/audio-soft/annotator/BUILD
+++ b/audio-soft/annotator/BUILD
@@ -1,8 +1,6 @@
 # add link to /usr/bin/qt4 so annotator can find it
 ln -s $TRACK_ROOT/usr/bin/qt4 /usr/lib/qt4/bin
-export OLDQTDIR=$QTDIR &&
-unset QTDIR &&
-export QTDIR=/usr/lib/qt4 &&
+persistent_add QTDIR=/usr/lib/qt4 &&
 cd vmqt &&
 scons clam_prefix=$INSTALL_ROOT/usr prefix=$INSTALL_ROOT/usr &&
 cd $SOURCE_DIRECTORY &&
