--- a/utils/sunbird/BUILD
+++ b/utils/sunbird/BUILD
@@ -1,8 +1,8 @@
-export CFLAGS="${CFLAGS//-O3/-O2}"      &&
-export CXXFLAGS="${CXXFLAGS//-O3/-O2}"  &&
-export MOZ_CO_PROJECT=calendar          &&
-export BUILD_OFFICIAL=1                 &&
-export MOZILLA_OFFICIAL=1               &&
+persistent_add CFLAGS="${CFLAGS//-O3/-O2}"      &&
+persistent_add CXXFLAGS="${CXXFLAGS//-O3/-O2}"  &&
+persistent_add MOZ_CO_PROJECT=calendar          &&
+persistent_add BUILD_OFFICIAL=1                 &&
+persistent_add MOZILLA_OFFICIAL=1               &&
 
 OPTS="--with-pthreads                                                \
       --with-default-mozilla-five-home=$INSTALL_ROOT/usr/lib/$SPELL  \
