libdvb: use persistent_add instead of export

--- a/video-libs/libdvb/BUILD
+++ b/video-libs/libdvb/BUILD
@@ -1,5 +1,5 @@
-export  CFLAGS="${CFLAGS} -Wall -g"             &&
-export  CXXFLAGS=${CFLAGS}                      &&
+persistent_add CFLAGS="${CFLAGS} -Wall -g"      &&
+persistent_add CXXFLAGS=${CFLAGS}               &&
 make_single                                     &&
 make                                            &&
 make_normal
