--- a/libs/minidom/BUILD
+++ b/libs/minidom/BUILD
@@ -1,7 +1,7 @@
-  export CPPFLAGS="$CPPFLAGS -I /usr/include/libxml2/libxml"
-  ./configure  --build=$BUILD        \
-               --prefix=/usr         \
-               --sysconfdir=/etc     \
-               --localstatedir=/var  \
-               $OPTS                 &&
-  make
+persistent_add CPPFLAGS="$CPPFLAGS -I /usr/include/libxml2/libxml"
+./configure  --build=$BUILD        \
+             --prefix=/usr         \
+             --sysconfdir=/etc     \
+             --localstatedir=/var  \
+             $OPTS                 &&
+make
