--- a/libs/libpathan/BUILD
+++ b/libs/libpathan/BUILD
@@ -1,4 +1,4 @@
-export  XERCESCROOT=$INSTALL_ROOT/usr  &&
+persistent_add XERCESCROOT=$INSTALL_ROOT/usr  &&
 make_single                            &&
 default_build                          &&
 make_normal
