libfwbuilder: use persistent_add instead of export

--- a/libs/libfwbuilder/BUILD
+++ b/libs/libfwbuilder/BUILD
@@ -1,2 +1,2 @@
-export  CPPFLAGS="$CPPFLAGS -I /usr/include/libxml2/libxml"  &&
+persistent_add CPPFLAGS="$CPPFLAGS -I /usr/include/libxml2/libxml" &&
 default_build
