gettext: use persistent_add instead of export

--- a/libs/gettext/BUILD
+++ b/libs/gettext/BUILD
@@ -1,7 +1,7 @@
 # disable emacs, bug #8592
 sedit  's/EMACS = @EMACS@/EMACS = no/'  gettext-tools/misc/Makefile.in  &&
 
-export  CC=gcc  &&
+persistent_add CC=gcc  &&
 
 make_single  &&
 
