--- a/libs/dbxml/BUILD
+++ b/libs/dbxml/BUILD
@@ -1,9 +1,10 @@
 if [ -z $JAVA_HOME ]; then
   if spell_ok j2sdk; then
-    export JAVA_HOME=/opt/java/j2sdk
+    JAVA_HOME=/opt/java/j2sdk
   elif spell_ok j2sdk-bin; then
-    export JAVA_HOME=/usr/lib/j2sdk1.4.1
+    JAVA_HOME=/usr/lib/j2sdk1.4.1
   fi
+  persistent_add JAVA_HOME
 fi &&
 
 cd  build_unix                     &&
