gdkxft: use persistent_add instead of export

--- a/libs/gdkxft/BUILD
+++ b/libs/gdkxft/BUILD
@@ -1,2 +1,2 @@
-  export  CFLAGS="`freetype-config --cflags` $CFLAGS -I/usr/include/libcapplet1" &&
-  default_build
+persistent_add CFLAGS="`freetype-config --cflags` $CFLAGS -I/usr/include/libcapplet1" &&
+default_build
