firefox: use persistent_add instead of export

--- a/http/firefox/BUILD
+++ b/http/firefox/BUILD
@@ -1,7 +1,7 @@
 cd  $SOURCE_DIRECTORY/mozilla  &&
 
 FIREFOX_HOME=$INSTALL_ROOT/usr/lib/firefox    &&
-export  MOZ_PHOENIX=1 &&
+persistent_add  MOZ_PHOENIX=1 &&
 
 #
 # Only strip if the user wants us to
