--- a/editors/j/BUILD
+++ b/editors/j/BUILD
@@ -1,11 +1,11 @@
-. /etc/profile.d/java.sh              &&
-chmod +x configure mkinstalldirs      &&
+. /etc/profile.d/java.sh            &&
+chmod +x configure mkinstalldirs    &&
 
-./configure  --build=${BUILD}         \
+./configure  --build=${BUILD}       \
            --prefix=/usr            \
            --sysconfdir=/etc        \
            --localstatedir=/var     \
            --with-jdk=${JAVA_HOME}  \
            ${OPTS}                  &&
-export MAKE_MODE=unix                 &&
+persistent_add MAKE_MODE=unix       &&
 make
