--- a/e/imlib/BUILD
+++ b/e/imlib/BUILD
@@ -1,3 +1,3 @@
-export CPPFLAGS="$CPPFLAGS -w -I/usr/include/libpng12"  &&
+persistent_add CPPFLAGS="$CPPFLAGS -w -I/usr/include/libpng12"  &&
 OPTS="--sysconfdir=${INSTALL_ROOT}/etc/imlib"           &&
 default_build
