--- a/editors/pdfedit/BUILD
+++ b/editors/pdfedit/BUILD
@@ -1,3 +1,3 @@
-export  QMAKESPEC=${QTDIR}/share/qt/mkspecs/linux-g++  &&
+persistent_add QMAKESPEC=${QTDIR}/share/qt/mkspecs/linux-g++  &&
 
 default_build
