xdirectfb: use persistent_add instead of export

--- a/display/xdirectfb/BUILD
+++ b/display/xdirectfb/BUILD
@@ -2,7 +2,7 @@ message  "Building xdirectfb takes a very long time."  &&
 rm -f config/cf/host.def  &&
 
 if  (echo $CFLAGS | grep -q -- "-Os"); then
-  export CFLAGS="-O2 ${CFLAGS//-Os/}"
+  persistent_add CFLAGS="-O2 ${CFLAGS//-Os/}"
 fi  &&
 
 if  spell_ok  linux-pam; then
