--- a/display/fresco/BUILD
+++ b/display/fresco/BUILD
@@ -1,4 +1,4 @@
-export LDFLAGS="$LDFLAGS -L /usr/X11R6/lib"    &&
+persistent_add LDFLAGS="$LDFLAGS -L /usr/X11R6/lib"    &&
 
 if [ "$CVS" = "yes" ]; then
   ./autogen.sh
