mozart-base: use persistent_add instead of export

--- a/devel/mozart-base/BUILD
+++ b/devel/mozart-base/BUILD
@@ -1,5 +1,5 @@
 #the bison and flex checks were seriously borked, I patch the configure
-export YACC=yacc                                               &&
+persistent_add YACC=yacc                                       &&
 patch -p1 < $SCRIPT_DIRECTORY/mozart.patch                     &&
 ./configure  \
     --host=$HOST \
