lazarus: use persistent_add instead of export

--- a/devel/lazarus/BUILD
+++ b/devel/lazarus/BUILD
@@ -1,4 +1,4 @@
-export LCL_PLATFORM=$LAZ_GUI          &&
+persistent_add LCL_PLATFORM=$LAZ_GUI          &&
 make_single                           &&
 make FPC=fpc                          &&
 strip -s lazarus startlazarus         &&
