expect: use persistent_add instead of export

--- a/devel/expect/BUILD
+++ b/devel/expect/BUILD
@@ -1,5 +1,5 @@
 if echo ${OPTS} | grep -q tk; then
-   export LDFLAGS="$LDFLAGS -L /usr/X11R6/lib"
+   persistent_add LDFLAGS="$LDFLAGS -L /usr/X11R6/lib"
 fi                                              &&
 
 OPTS="--with-tcl=/usr/lib                       \
