xca: use persistent_add instead of export

--- a/crypto/xca/BUILD
+++ b/crypto/xca/BUILD
@@ -5,8 +5,8 @@ sedit 's:mandir=man:mandir=share/man:'           doc/Makefile  &&
 sedit 's:QTDIR/bin/:QTDIR/bin/qt4:'              configure     &&
 sedit 's:/qt/Qt /qt4/Qt:/Qt:'                    configure     &&
 
-export QTDIR="/usr"                                            &&
-export PATH=${TRACK_ROOT}/usr/bin/qt4:$PATH                    &&
+persistent_add QTDIR="/usr"                                    &&
+persistent_add PATH=${TRACK_ROOT}/usr/bin/qt4:$PATH            &&
 
 ./configure                                                    &&
 make
