--- a/chat-im/psi/BUILD
+++ b/chat-im/psi/BUILD
@@ -1,8 +1,7 @@
-  QTDIR=/usr    &&
-  PATH=$QTDIR/bin/qt4:$PATH
-  export QTDIR=/usr                                         &&
-  ./configure --prefix=/usr $OPTS                           &&
-  sedit "s/QTDIR)\/include/QTDIR)\/include\/qt/g" Makefile  &&
-  make_single     &&
-  make            &&
-  make_normal
+persistent_add QTDIR=/usr                                 &&
+PATH=$QTDIR/bin/qt4:$PATH                                 &&
+./configure --prefix=/usr $OPTS                           &&
+sedit "s/QTDIR)\/include/QTDIR)\/include\/qt/g" Makefile  &&
+make_single     &&
+make            &&
+make_normal
