thunderbird: use persistent_add instead of export

--- a/mail/thunderbird/BUILD
+++ b/mail/thunderbird/BUILD
@@ -1,13 +1,13 @@
 cd  $SOURCE_DIRECTORY/mozilla  &&
 
 THUNDERBIRD_HOME=${INSTALL_ROOT}/usr/lib/thunderbird &&
-export  MOZ_THUNDERBIRD="1"   &&
+persistent_add  MOZ_THUNDERBIRD="1"   &&
 
 #
 # No fast optimization for Mozilla, bit us so many times...
 #
-export  CFLAGS="${CFLAGS//-O3/-O2}"      &&
-export  CXXFLAGS="${CXXFLAGS//-O3/-O2}"  &&
+persistent_add  CFLAGS="${CFLAGS//-O3/-O2}"      &&
+persistent_add  CXXFLAGS="${CXXFLAGS//-O3/-O2}"  &&
 
 #
 # -ffast-math breaks plugins
