--- a/audio-libs/libgig/BUILD
+++ b/audio-libs/libgig/BUILD
@@ -1,7 +1,4 @@
-OPTS="--disable-dependency-tracking $OPTS"  &&
-
-default_build  &&
-
+OPTS="--disable-dependency-tracking $OPTS"  default_build  &&
 
 if  is_depends_enabled  $SPELL  doxygen
 then
