--- a/audio-creation/linuxsampler/BUILD
+++ b/audio-creation/linuxsampler/BUILD
@@ -1,7 +1,6 @@
-OPTS="--disable-dependency-tracking $OPTS"  &&
-
-default_build  &&
-
+OPTS="--disable-asio-driver --disable-mmemidi-driver           \
+      --disable-coremidi-driver --disable-dependency-tracking  \
+      $LS_ASM $OPTS"  default_build                            &&
 
 if  is_depends_enabled  $SPELL  doxygen
 then
