--- a/audio-libs/libgig/BUILD
+++ b/audio-libs/libgig/BUILD
@@ -1,4 +1,6 @@
+make_single                                                &&
 OPTS="--disable-dependency-tracking $OPTS"  default_build  &&
+make_normal                                                &&
 
 if  is_depends_enabled  $SPELL  doxygen
 then
