linuxsampler: Replaced deprecated MAKE_NJOBS=1 with make_single, make_normal.

--- a/audio-creation/linuxsampler/BUILD
+++ b/audio-creation/linuxsampler/BUILD
@@ -1,6 +1,8 @@
+make_single                                                    &&
 OPTS="--disable-asio-driver --disable-mmemidi-driver           \
       --disable-coremidi-driver --disable-dependency-tracking  \
       $LS_ASM $OPTS"  default_build                            &&
+make_normal                                                    &&
 
 if  is_depends_enabled  $SPELL  doxygen
 then
