pygobject: Disable introspection support See https://bugzilla.gnome.org/show_bug.cgi?id=657054 and https://bugzilla.redhat.com/show_bug.cgi?id=719791

--- a/gnome2-libs/pygobject/BUILD
+++ b/gnome2-libs/pygobject/BUILD
@@ -1,5 +1,4 @@
-if spell_ok pygobject3; then
-  OPTS="$OPTS --disable-introspection" 
-fi &&
-OPTS="$OPTS --enable-thread" &&
+OPTS="--enable-thread           \
+      --disable-introspection   \
+      $OPTS"                    &&
 default_build
