--- a/gnome2-libs/policykit/BUILD
+++ b/gnome2-libs/policykit/BUILD
@@ -1,4 +1,5 @@
 create_account polkituser  &&
+create_account polkitd     &&
 
 if [[ "$POLICYKIT_AFW" == "linux-pam" ]]; then
    OPTS="--with-authfw=pam $OPTS"
