gnupg: replace -O3 with -O2, gnupg doesn't play nice with -O3

--- a/crypto/gnupg/BUILD
+++ b/crypto/gnupg/BUILD
@@ -2,4 +2,7 @@ if [[ $GNUPG_STATIC == y ]]; then
   LDFLAGS="-static -s $LDFLAGS"
 fi &&
 
+# gnupg doesn't play nice with -O3
+CFLAGS=${CFLAGS//-O3/-O2} &&
+
 default_build
