grub: Allow to select the target platform

--- a/disk/grub2/BUILD
+++ b/disk/grub2/BUILD
@@ -1,4 +1,6 @@
 OPTS="${OPTS} ${GRUB2_OPTS} -disable-werror" &&
+OPTS="$OPTS --with-platform=${GRUB2_PLATFORM%/*}" &&
+OPTS="$OPTS --target=${GRUB2_PLATFORM#*/}" &&
 CFLAGS=${CFLAGS/-m64/} &&
 CFLAGS=${CFLAGS/-O?/-Os} &&
 disable_pic force &&
