linux: ifenslave.c was removed in 3.11-rc1
See
https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=b1098bbe1b24d5d90cff92fbd716d2ef4bed2cff

--- a/kernels/linux/BUILD
+++ b/kernels/linux/BUILD
@@ -28,8 +28,10 @@ if [[ -z "$INTERNAL_ISO_VAR" ]] ; then
   esac &&
   eval make $EXTRA_MAKE_OPTIONS $IMAGE_TARGET &&
   eval make $EXTRA_MAKE_OPTIONS modules &&
-  if grep -q CONFIG_BONDING=m ./.config || grep -q CONFIG_BONDING=y ./.config
+  LINUX_BRANCH=$(echo ${VERSION} | cut -d. -f1,2)
+  if [[ ${LINUX_BRANCH//./} -le 310 ]] && ( grep -q CONFIG_BONDING=m ./.config || grep -q CONFIG_BONDING=y ./.config )
   then
+    echo 'Building ifenslave for network bonding...'  &&
     gcc -Wall -O ./Documentation/networking/ifenslave.c -o ifenslave
   fi
 else
