ffmpeg: rewritten the spell

--- a/video/ffmpeg/BUILD
+++ b/video/ffmpeg/BUILD
@@ -1,10 +1,26 @@
 disable_pic  &&
 
-#if [ $FFAMR != none ];then
-#  OPTS="--enable-$FFAMR $OPTS"
-#fi  &&
+if list_find "$FFMPEG_PROGRAMS" "none"; then
+  OPTS="--disable-programs $OPTS"
+elif list_find "$FFMPEG_PROGRAMS" "all"; then
+  :
+else
+  for program in $FFMPEG_PROGRAM_LIST; do
+    if ! list_find "$program" "$FFMPEG_PROGRAMS"; then
+      OPTS="--disable-$program $OPTS"
+    fi
+  done &&
 
-OPTS="$FFMPEG_SWSCALE $OPTS" &&
+  persistent_remove FFMPEG_PROGRAM_LIST &&
+  persistent_save &&
+  persistent_load
+fi &&
+
+OPTS="$FFMPEG_OPTS $OPTS" &&
+
+if echo "$CFLAGS" | grep -q "\-Os"; then
+  OPTS="--enable-small $OPTS"
+fi &&
 
 # fixing issue #381
 if is_depends_enabled $SPELL openjpeg; then
@@ -16,10 +32,10 @@ LDFLAGS=${LDFLAGS//-Wl,--as-needed/}  &&
 ./configure  --prefix=${INSTALL_ROOT}/usr            \
              --mandir=${INSTALL_ROOT}/usr/share/man  \
              --enable-shared                         \
-             --enable-pthreads                       \
              --disable-static                        \
-             --disable-debug                         \
+             --enable-pthreads                       \
              --enable-postproc                       \
              --enable-gpl                            \
              $OPTS                         &&
-make
+
+make V=1
