--- a/x11/xlockmore/BUILD
+++ b/x11/xlockmore/BUILD
@@ -1,11 +1,4 @@
-if list_find $XLOCKMORE_BO "--enable-blank-only"; then
-  OPTS="--without-opengl \
-        --without-mesa \
-        --without-freetype \
-        $OPTS"
-fi &&
-
-OPTS="$XLOCKMORE_BO $OPTS"
+OPTS="$XLOCKMORE_OPTS $OPTS"
 
 make_single &&
 default_build &&
