xautolock: added option to read X resources file

--- a/x11/xautolock/BUILD
+++ b/x11/xautolock/BUILD
@@ -1,3 +1,7 @@
+if [[ $XAUTOLOCK_READXDEF == y ]]; then
+  CFLAGS="-DReadXdefaultsFile ${CFLAGS}"
+fi &&
+
 xmkmf -a &&
 
-make
+make EXTRA_LDOPTIONS="${LDFLAGS}" CDEBUGFLAGS="${CFLAGS}"
