util-linux: => 2.24 (aes); removed conflicts with simpleinit-msb/shadow

--- a/utils/util-linux/BUILD
+++ b/utils/util-linux/BUILD
@@ -5,9 +5,16 @@ if [[ $CROSS_INSTALL == on ]]; then
   OPTS="--host=$HOST $OPTS"
 fi &&
 
-if [[ $UL_VERSION == latest ]]; then
-  OPTS="--disable-eject --disable-kill --disable-login --disable-sulogin --disable-su --disable-utmpdump $OPTS"
-fi &&
+OPTS="--disable-eject \
+      --disable-kill \
+      --disable-last \
+      --disable-login \
+      --disable-mesg \
+      --disable-nologin \
+      --disable-su \
+      --disable-sulogin \
+      --disable-utmpdump \
+      $OPTS"
 
 create_group tty &&
 
