--- a/video-libs/libvpx/BUILD
+++ b/video-libs/libvpx/BUILD
@@ -1,2 +1,4 @@
-./configure --prefix=/usr --enable-shared &&
+./configure --prefix=/usr --enable-shared            \
+            --enable-vp8 --enable-runtime-cpu-detect \
+            --enable-postproc --enable-pic           &&
 make
