--- a/net/ipset/BUILD
+++ b/net/ipset/BUILD
@@ -1,8 +1,10 @@
 if [[ ${VERSION/.*} == 4 ]]; then
   make PREFIX="$INSTALL_ROOT/usr"
 else
-  ./autogen.sh &&
-
+  OPTS="$IPSET_OPTS $OPTS" &&
   default_build &&
-  make modules
+
+  if list_find "$IPSET_OPTS" "--with-kmod"; then
+    make modules
+  fi
 fi
