--- a/video/mpv/BUILD
+++ b/video/mpv/BUILD
@@ -18,8 +18,8 @@ if is_depends_enabled $SPELL $(get_spell_provider $SPELL OPENGL); then
   fi
 fi &&
 
-./configure --prefix=${INSTALL_ROOT}/usr \
+./old-configure --prefix=${INSTALL_ROOT}/usr \
             --confdir=${TRACK_ROOT}/etc/mpv \
             $OPTS &&
 
-make V=1
+make V=1 -f old-makefile
