par2cmdline-tbb: => 0.4-tbb-20100203

--- a/archive/par2cmdline-tbb/BUILD
+++ b/archive/par2cmdline-tbb/BUILD
@@ -1,5 +1,3 @@
-cd $SOURCE_DIRECTORY &&
-aclocal &&
-autoconf &&
-automake &&
+export CXXFLAGS+=' -std=c++11' &&
+export LDFLAGS+=' -lrt' &&
 default_build
