dhcpcd - IPv6/4 support

--- a/net/dhcpcd/BUILD
+++ b/net/dhcpcd/BUILD
@@ -1,2 +1,3 @@
+OPTS+=" $DHCPD" &&
 ./configure --libexecdir=${INSTALL_ROOT}/usr/libexec --dbdir=${INSTALL_ROOT}/var/lib/dhcpcd $OPTS &&
 CSTD=gnu99 make DESTDIR="$INSTALL_ROOT"
