gofffice: updated to 0.10.9

--- a/gnome2-libs/goffice/BUILD
+++ b/gnome2-libs/goffice/BUILD
@@ -1,3 +1,7 @@
+if [ "$GOFFICE_BACKEND" == "keyfile" ]; then
+   OPTS="--with-config-backend=keyfile $OPTS"
+fi  &&
+
 CFLAGS=${CFLAGS/-ffast-math} &&
 
 default_build
