--- a/audio-drivers/jack2/BUILD
+++ b/audio-drivers/jack2/BUILD
@@ -1,3 +1,3 @@
-./waf  configure --prefix=/usr --destdir="$INSTALL_ROOT"  \
-       --enable-pkg-config-dbus-service-dir $OPTS         &&
-./waf  build
+OPTS="--enable-pkg-config-dbus-service-dir $OPTS" &&
+
+waf_build
