--- a/net/stunnel/BUILD
+++ b/net/stunnel/BUILD
@@ -1,25 +1,14 @@
-[[ $CROSS_INSTALL == on ]] && OPTS="$OPTS --host=${HOST} --build=${BUILD}"
+OPTS="--with-threads=$STUNNEL_THREADS \
+                     $STUNNEL_OPTS \
+                     $OPTS" &&
 
-OPTS=" --prefix=${INSTALL_ROOT}/usr  \
-   --sysconfdir=${INSTALL_ROOT}/etc  \
---localstatedir=${INSTALL_ROOT}/var  \
-       --mandir=${INSTALL_ROOT}/usr/share/man   \
-      --infodir=${INSTALL_ROOT}/usr/share/info  \
-                $OPTS"
-
-
-case  $CERTIFICATE  in
-
+case "$CERTIFICATE" in
   y|Y|j|J)
-    ./configure $OPTS                   &&
-    make all                            &&
+    default_build &&
     rm -f /etc/stunnel/stunnel.pem
   ;;
-
   *)
     cp /etc/stunnel/stunnel.pem tools/  &&
-    ./configure $OPTS                   &&
-    make all
+    default_build
   ;;
-
 esac
