--- a/devel/qbs/BUILD
+++ b/devel/qbs/BUILD
@@ -1,5 +1,10 @@
-  export PKG_CONFIG_PATH="$QT5DIR/lib/pkgconfig"
-  PATH="$QT5DIR/bin:$PATH:$SOURCE_DIRECTORY"
-  qmake -r PREFIX=$QT5DIR $OPTS qbs.pro &&
-  make
+if is_depends_enabled $SPELL qtbase;then
+ QTDIR=$QT5DIR
+else
+ QTDIR=$QT4DIR
+fi
+export PKG_CONFIG_PATH="$QTDIR/lib/pkgconfig"
+PATH="$QTDIR/bin:$PATH:$SOURCE_DIRECTORY"
+qmake -r PREFIX=$QTDIR $OPTS qbs.pro &&
+make
 
