--- a/libs/sip/BUILD
+++ b/libs/sip/BUILD
@@ -1,5 +1,3 @@
-  sed -i "s/-O2//" specs/linux-g++ &&
-
-  python ./configure.py  \
-         CFLAGS="${CFLAGS}" CXXFLAGS="${CXXFLAGS} -fno-exceptions"           &&
-  make
+sed -i "s/-O2//" specs/linux-g++ &&
+$PYTHON ./configure.py CFLAGS_EXCEPTIONS_OFF=1 &&
+make
