--- a/libs/pyqt4/BUILD
+++ b/libs/pyqt4/BUILD
@@ -1,7 +1,7 @@
 if [ $PYQT_BIG == y ];then
   VBIG=-c
-fi                                               &&
-export QTDIR=/usr                                &&
-PATH=$QTDIR/bin/qt4:$PATH                        &&
-python  ./configure.py --confirm-license $VBIG   &&
+fi &&
+export QTDIR=/usr          &&
+PATH=$QTDIR/bin/qt4:$PATH  &&
+$PYTHON  ./configure.py --confirm-license $VBIG  -j $MAKE_NJOBS &&
 make
