graphics/imagemagick: version 6.8.8-8

--- a/graphics/imagemagick/BUILD
+++ b/graphics/imagemagick/BUILD
@@ -1,10 +1,10 @@
-if [[ "$IMAGEMAGICK_X" != "y" ]]; then
-  OPTS="--without-x $OPTS"
-fi &&
-
 OPTS="--enable-shared \
       --without-autotrace \
+      --with-threads \
+      --with-modules \
       $IMAGEMAGICK_HDRI \
+      $IMAGEMAGICK_OPENMP \
+      --with-quantum-depth=${IMAGEMAGICK_QUANTUM_DEPTH} \
       $OPTS" &&
 
 default_build
