audio-soft/qjackctl: version 0.3.11

--- a/audio-soft/qjackctl/BUILD
+++ b/audio-soft/qjackctl/BUILD
@@ -1,3 +1,2 @@
-OPTS="$QJCTL_TRAY $QJCTL_JACK_MIDI $OPTS      \
-      --with-qt=${INSTALL_ROOT}/usr/bin/qt4"  \
-default_build
+OPTS="$QJCTL_TRAY $QJCTL_JACK_MIDI $OPTS" &&
+PATH=${INSTALL_ROOT}/usr/bin/qt4:$PATH default_build
